--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
   </main>
   <footer>
-    <p>&copy; 2024 Shlok Jain (<a href="mailto:rubikscubeshlokjain@gmail.com">email me</a>) </p>
+    <p>&copy; 2024 Shlok Jain [IITK] (<a href="mailto:rubikscubeshlokjain@gmail.com">email</a>) </p>
   </footer>
 </body>
 </html>
