--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="google-site-verification" content="pEkUra8ZfmadpegtNMdv3F9FSd8Arqk4ULOhF_1pt14" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7960697047654926"
+     crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Free Download: JEE Mains Previous Year Papers (No Solutions)</title>
   <link rel="stylesheet" href="/jeepyq/style.css">
